# promera

./: .gitignore  README.md  pyproject.toml
examples/: motif_scaffold.yaml
promera/: __main__.py
promera/data/: utils.py
promera/diffusion/: sampler.py
promera/inference/: __init__.py  cofolding.py  cofolding.yaml  design.py  motif.py  schedule.py  utils.py
promera/model/: config.yaml  cudagraph.py  diffusion.py  model.py
promera/model/layers/: attention.py  initialize.py
promera/model/layers/triangular_attention/: attention.py
promera/model/loss/: diffusion.py
promera/utils/: load_weights.py
