[project]
name = "promera"
version = "0.1.0"
description = "biomolecular generative model for structure prediction and design"
requires-python = ">=3.12"
dependencies = [
    "cuequivariance==0.8.0",
    "cuequivariance-ops-torch-cu12==0.8.0",
    "cuequivariance-torch==0.8.0",
    "dm-tree>=0.1.10",
    "einops>=0.8.2",
    "fairscale>=0.4.13",
    "gpustat>=1.1.1",
    "lightning==2.4.0",
    "lmdb>=1.7.5",
    "matplotlib>=3.10.9",
    "ml-collections>=1.1.0",
    "numpy>=2.4.2",
    "omegaconf>=2.3.0",
    "pandas>=3.0.0",
    "prody>=2.6.1",
    "rdkit==2024.9.6",
    "rustworkx>=0.17.1",
    "scikit-learn>=1.8.0",
    "tinyprot @ git+https://github.com/bjing2016/tinyprot.git",
    "torch==2.9.0",
    "triton==3.5.0",
    "wandb>=0.24.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["promera*"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
